[package]
name = "erfa-sys"
version = "0.1.0"
edition = "2018"
authors = ["Christopher H. Jordan <christopherjordan87@gmail.com>"]
license = "MPL-2.0"
description = "Crate for providing bindings to and linking the ERFA C library."
repository = "https://github.com/cjordan/rust-erfa"
homepage = "https://github.com/cjordan/rust-erfa"
links = "erfa"

[features]
static = ["autotools"]

[build-dependencies]
pkg-config = "0.3.*"
autotools = { version = "0", optional = true }

[dev-dependencies]
criterion = "0.3.*"

[[bench]]
name = "bench"
harness = false
