[package]
name = "erfa-sys"
version = "0.1.2"
edition = "2018"
authors = ["Christopher H. Jordan <christopherjordan87@gmail.com>"]
license = "MPL-2.0"
description = "Crate for providing bindings to and linking the ERFA C library."
repository = "https://github.com/cjordan/rust-erfa"
homepage = "https://github.com/cjordan/rust-erfa"
links = "erfa"

[features]
static = ["autotools"]

[build-dependencies]
pkg-config = "0.3.*"
autotools = { version = "0", optional = true }

[dev-dependencies]
criterion = "0.3.*"

[package.metadata.docs.rs]
features = ["static"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin"]

[[bench]]
name = "bench"
harness = false
